--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,9 +1,12 @@
 <div id="nav-container">
-  <ul id="nav-contents">
-    <li><img id="ic-home" src="../../../assets/icon/navigation-bar/home.svg"></li>
-    <li><img (click)="clickItem()" [ngStyle]="objActive" id="ic-notification" src="../../../assets/icon/navigation-bar/notification.svg"></li>
-    <li><img id="ic-follow" src="../../../assets/icon/navigation-bar/follow.svg"></li>
-    <li><img id="ic-group" src="../../../assets/icon/navigation-bar/group.svg"></li>
-    <li><img id="ic-personal" src="../../../assets/icon/navigation-bar/person.svg"></li>
+  <ul id="nav-contents" [ngStyle]="ngStyleNavContents">
+    <li (click)="clickHomeItem()"><img [ngStyle]="ngStyleHome" id="ic-home" src={{srcHome}}></li>
+    <li (click)="clickNotificationItem()"><div id="ntf-container">
+      <img [ngStyle]="ngStyleNotification" id="ic-notification" src={{srcNotification}}>
+      <div id="ntf-number" [ngStyle]="ngStypleNtfNumber"><p>{{ntfNumber}}</p></div>
+    </div></li>
+    <li (click)="clickFollowItem()"><img [ngStyle]="ngStyleFollow" id="ic-follow" src={{srcFollow}}></li>
+    <li (click)="clickGroup()"><img [ngStyle]="ngStyleGroup" id="ic-group" src={{srcGroup}}></li>
+    <li (click)="clickPerson()"><img [ngStyle]="ngStylePerson" id="ic-personal" src={{srcPerson}}></li>
   </ul>
 </div>
