--- a/src/app/components/navigation-bar/navigation-bar.component.scss
+++ b/src/app/components/navigation-bar/navigation-bar.component.scss
@@ -9,16 +9,21 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    padding-inline-start: 4px;
+    padding-inline-start: 12px;
     padding-inline-end: 12px;
-
-    #ic-home {
-      margin-top: 4px;
-      width: 40px;
-      height: 40px;
-      padding: 8px;
-      background-color: var(--ion-color-app-primary);
-      border-radius: 20px;
+    #ntf-container {
+      position: relative;
+      #ntf-number {
+        position: absolute;
+        top: -8px;
+        right: 0px;
+        p {
+          padding: 2px;
+          font-size: 8px;
+          background-color: var(--ion-color-app-orange-dark);
+          border-radius: 8px;
+        }
+      }
     }
   }
 }
