--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,15 +1,34 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>home</ion-title>
-  </ion-toolbar>
+  <!-- <ion-toolbar>
+    <ion-title><img src="../../../assets/icon/app-name.png"></ion-title>
+  </ion-toolbar> -->
 </ion-header>
 
-<ion-content>
-  <p>alo</p>
-  
-  
-
+<ion-content [scrollEvents]="true">
+  <div id="app-name"><img src={{appName}}></div>
+  <app-search-bar></app-search-bar>
+  <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+    <ion-slide id="home-follow-short-object" *ngFor="let card of [0,1,2,3,4,5,6]" >
+      <ion-col>
+        <app-short-view-object></app-short-view-object>
+      </ion-col>
+    </ion-slide>
+  </ion-slides>
+  <app-to-create-post></app-to-create-post>
+  <div id="home-hot">{{homeContentHot}}</div>
+  <ion-slides [options]="{ slidesPerView: 'auto', zoom: false, grabCursor: true }">
+    <ion-slide id="home-follow-short-post" *ngFor="let card of [0,1,2,3,4,5,6]" >
+      <ion-col>
+        <app-short-post></app-short-post>
+      </ion-col>
+    </ion-slide>
+  </ion-slides>
+  <div id="home-follow">{{homeContentFollow}}</div>
+  <app-full-post></app-full-post>
+  <app-full-post></app-full-post>
+  <app-full-post></app-full-post>
+  <app-full-post></app-full-post>
 </ion-content>
 <ion-footer>
-  <app-navigation-bar></app-navigation-bar>
+  <app-navigation-bar [location] = "0"></app-navigation-bar>
 </ion-footer>
