--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,9 +1,49 @@
-ion-content{
-    height: 100%;
-}
-ion-footer{
-    padding-bottom: 12px;
+ion-content {
+  // overwrite inline styles
+  --offset-bottom: auto!important;
+  --overflow: hidden;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  height: 100%;
+  width: 100%;
+  background-color: var(--ion-color-app-white);
+  #app-name {
+    padding-top: 32px;
     padding-left: 12px;
     padding-right: 12px;
-    background-color: var(--ion-color-app-white);
+    padding-bottom: 20px;
+  }
+  #home-follow-short-object{
+    width: 120px;
+    height: 48px;
+    margin-top: 12px;
+    padding-inline-start: 6px;
+    margin-inline-end: 12px;
+    
+  }
+  #home-hot{
+    font-size: 24px;
+    padding-left: 12px;
+    font-weight: bold;
+    color: var(--ion-color-app-orange-dark);
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+  #home-follow-short-post{
+    max-width: 288px;
+    height: 389px;
+    padding-inline-start: 8px;
+    padding-inline-end: 8px;
+  }
+  #home-follow{
+    font-size: 24px;
+    padding-left: 12px;
+    font-weight: bold;
+    color: var(--ion-color-app-green-darker);
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
