--- a/src/global.scss
+++ b/src/global.scss
@@ -45,3 +45,10 @@
 * {
     font-family: 'Montserrat';
 }
+
+ion-footer {
+    padding-bottom: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: var(--ion-color-app-white);
+  }
