--- a/src/app/pages/forgot-password-final/forgot-password-final.page.html
+++ b/src/app/pages/forgot-password-final/forgot-password-final.page.html
@@ -1,7 +1,7 @@
 
 <ion-content>
   <div style="text-align: left;margin-top:47px;margin-left:12px">
-    <img (click)="backbtn()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
+    <img  id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
     <ion-text style="color: #237A73;margin-left:24px;font-size:23px;position:relative;bottom:5px;" color="primary">
       Quên mật khẩu
      </ion-text>
