--- a/src/app/pages/register-part2/register-part2.page.html
+++ b/src/app/pages/register-part2/register-part2.page.html
@@ -1,7 +1,7 @@
 
 <ion-content>
   <div style="text-align: left;margin-top:47px;margin-left:12px">
-    <img (click)="backbtn()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
+    <img  id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
 
   </div>
 
