--- a/src/app/pages/sub-pages/create-post-page/create-post-page.page.html
+++ b/src/app/pages/sub-pages/create-post-page/create-post-page.page.html
@@ -8,7 +8,7 @@
     <img style="margin-right:12px;position:relative;left: 60px;top:15px" id="rh-back-btn" src="../../../assets/icon/login/Postbtn.png" alt="">
   </div> -->
   <div style="text-align: left;margin-top:47px;margin-left:12px">
-    <img (click)="backbtn()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
+    <img  id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
     <ion-text style="color: #237A73;margin-left:24px;font-size:23px;position:relative;bottom:5px;" color="primary">
       Tạo bài viết
      </ion-text>
