--- a/src/app/pages/sub-pages/create-post-page/create-post-page.page.html
+++ b/src/app/pages/sub-pages/create-post-page/create-post-page.page.html
@@ -1,46 +1,47 @@
-
 <ion-content>
-  <!-- <div id="register-header">
-    <img style="margin-left:12px;" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
-      <ion-text style="font-size:23px;position: relative;margin-left:24px;" color="primary">
-       Tạo bài viết
-      </ion-text>
-    <img style="margin-right:12px;position:relative;left: 60px;top:15px" id="rh-back-btn" src="../../../assets/icon/login/Postbtn.png" alt="">
-  </div> -->
   <form action="">
-    <div style="text-align: left;margin-top:47px;margin-left:12px">
+    <div class="header">
       <img (click)="backbtn()"  id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
-      <ion-text style="color: #237A73;margin-left:24px;font-size:23px;position:relative;bottom:5px;" color="primary">
+      <ion-text id="text-header" color="primary">
         Tạo bài viết
        </ion-text>
-       <img style="margin-right:12px;position:relative;left: 60px;top:10px" id="rh-back-btn" src="../../../assets/icon/login/Postbtn.png" alt="">
+       <img style="margin-right:12px;position:relative;left: 40px;top:10px" id="rh-back-btn" src="../../../assets/icon/login/Postbtn.png" alt="">
     </div>
     <ion-grid fixed style="padding-left:12px ;padding-right:12px;">
       <ion-row>
-        <ion-col size="2">
+        <ion-col size="2" style="padding:0px ;">
           <img src="../../../assets/icon/login/User.png" alt="">
         </ion-col>
-        <ion-col size="6">
-          <ion-text color="primary">
+        <ion-col size="6" style="padding:0px ;">
+          <ion-text color="black" style="font-family: 'Montserrat Bold';">
             User Name
           </ion-text>
         </ion-col>
-        <ion-col size="4" >
-          <div style="background-color:red;position: relative;right:155px;top:25px;">
-              abc
+        <ion-col size="4" style="padding:0px; ;" >
+          <div class="selector">
+            <div id="selectField" (click)="presentAlertRadio()">
+              <p id="type-select" ><img id="img-select1" class="center" src="../../../assets/icon/login/world.png" alt="">   Công khai   <img id="img-dropdownbtn" class="center" src="../../../assets/icon/login/dropdown.png" alt=""></p>
+            </div>
           </div>
         </ion-col>
-        <ion-col size="12" >
-          <input type="text" placeholder="Bạn đang nghĩ tới việc gì?" style="width: 290px;">
+        <ion-col size="12" style="padding:0px ;" >
+          <div  id="search_input"> <ion-input id="i-input" type="text" placeholder="Bạn đang nghĩ tới việc gì?"></ion-input></div>
+
         </ion-col>
-        <ion-col size="12" >
-          <ion-textarea></ion-textarea>
+        <ion-col size="12" style="padding:0px ;" >
+          <ion-textarea id="text-area"></ion-textarea>
+        </ion-col>
+        <ion-col size="12" style="padding:0px ;" >
+          <div id="button_bar">
+              <div >
+                <img id="img-addpicture" src="../../../assets/icon/login/addpicture.png" alt="">
+                <img id="img-addfriend" src="../../../assets/icon/login/addfriend.png" alt="">
+              </div>
+        </div>
         </ion-col>
       </ion-row>
     </ion-grid>
   </form>
-
-
 </ion-content>
 
 
