--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -95,7 +95,7 @@
 
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
