--- a/src/app/pages/register-part2/register-part2.page.html
+++ b/src/app/pages/register-part2/register-part2.page.html
@@ -17,29 +17,16 @@
       </ion-col>
 
       <ion-col size="12" style="padding:0 ;">
-          <div style="margin-top:69px ;" >
-            <ion-text color="primary" style="font-size: large;color:#237A73;">
-              Xác minh
-            </ion-text>
-          </div>
-      </ion-col>
-      <ion-col size="12" style="padding:0 ;">
-        <div>
-          <div id="name_display" > <ion-input type="text" placeholder="Tên hiển thị"></ion-input></div>
-        </div>
-      </ion-col>
-
-      <ion-col size="12" style="padding:0 ;">
         <div >
           <ion-text style="text-align: center;margin-top: 20px;font-size: 9.5px;" color="">
-            <div style="margin-top: 10px;" >
+            <div style="margin-top: 30px;" >
               <ion-text style="text-align: center;font-family: 'Montserrat';
               font-style: normal;
               font-weight: 400;
               font-size: 11.5px;
-              line-height: 15px;" color="">
-                <div id="contract">
-                 Chúng tôi đã gửi mã xác nhận qua email của bạn. Vui lòng nhập mã vào ô bên trên.
+              line-height: 15px;font-size:15px;" color="">
+                <div id="">
+                  Vui lòng vào mail để xác nhận đăng ký. Nếu chưa nhận được vui lòng nhấn nút gửi lại mã.
 
                 </div>
               </ion-text>
@@ -49,6 +36,7 @@
 
 
       </ion-col>
+
       <ion-col size="12" style="padding:0 ;">
         <ion-text style="top: 5px;position: relative;margin-bottom: 96px;margin-left: 40px;font-size: 9.5px;text-align:center ;">
         </ion-text>
