--- a/src/app/pages/register-final/register-final.page.html
+++ b/src/app/pages/register-final/register-final.page.html
@@ -1,6 +1,6 @@
 
 <ion-content>
-  <div style="text-align: left;margin-top:47px;margin-left:12px">
+  <div style="text-align: left;margin-top:10px;margin-left:12px;position:relative;">
     <img (click)="backbtn()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
     <ion-text style="color: #237A73;margin-left:24px;font-size:23px;position:relative;bottom:5px;" color="primary">
       Hoàn tất đăng ký
@@ -61,9 +61,6 @@
       </ion-button>
     </div>
   </ion-grid>
-  <div  style="margin-left: 12px ; margin-right: 12px; ">
-
-  </div>
 
 
 </ion-content>
