--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,13 +1,13 @@
 <ion-content>
 
-  <div style="text-align: left;margin-top:30px;margin-left:12px;margin-bottom:65px;">
+  <div style="text-align: left;margin-top:10px;margin-left:12px;">
     <img (click)="backbtn()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
     <img  src="../../../assets/icon/login/DLU_connect.png" alt="" class="center">
 
   </div>
 
   <form action="">
-    <ion-grid fixed style="padding-left:12px ;padding-right:12px;">
+    <ion-grid fixed style="padding-left:12px ;padding-right:12px;margin-top:55px;">
 
       <ion-row>
         <ion-col size="12" style="padding:0 ;">
