--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,12 +1,23 @@
 <ion-content>
-  <div style="text-align: left;margin-top:10px;margin-left:12px;">
-    <img (click)="back()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
-    <img  src="../../../assets/icon/login/DLU_connect.png" alt="" class="center">
-
+  <div style="text-align: left; margin-top: 10px; margin-left: 12px">
+    <img
+      (click)="back()"
+      id="rh-back-btn"
+      src="../../../assets/icon/login/back.png"
+      alt=""
+    />
+    <img
+      src="../../../assets/icon/login/DLU_connect.png"
+      alt=""
+      class="center"
+    />
   </div>
 
-  <form action="">
-    <ion-grid fixed style="padding-left:12px ;padding-right:12px;margin-top:55px;">
+  <form [formGroup]="credentials" (submit)="register()">
+    <ion-grid
+      fixed
+      style="padding-left: 12px; padding-right: 12px; margin-top: 55px"
+    >
       <ion-row>
         <ion-col size="12" style="padding: 0">
           <ion-text id="labelLogin" color="primary"> Đăng ký </ion-text>
