--- a/src/app/pages/forgot-password-part2/forgot-password-part2.page.html
+++ b/src/app/pages/forgot-password-part2/forgot-password-part2.page.html
@@ -1,69 +1,106 @@
-
 <ion-content>
-  <div style="text-align: left;margin-top:47px;margin-left:12px">
-    <img  id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
-    <ion-text style="color: #237A73;margin-left:24px;font-size:23px;position:relative;bottom:5px;" color="primary">
+  <div style="text-align: left; margin-top: 47px; margin-left: 12px">
+    <img id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="" />
+    <ion-text
+      style="
+        color: #237a73;
+        margin-left: 24px;
+        font-size: 23px;
+        position: relative;
+        bottom: 5px;
+      "
+      color="primary"
+    >
       Quên mật khẩu
-     </ion-text>
-
+    </ion-text>
   </div>
 
-
-  <ion-grid fixed style="padding-left:12px ;padding-right:12px;">
-    <div style="margin-top:22px ;">
-      <img  src="../../../assets/icon/login/DLU_connect.png" alt="" class="center">
+  <ion-grid fixed style="padding-left: 12px; padding-right: 12px">
+    <div style="margin-top: 22px">
+      <img
+        src="../../../assets/icon/login/DLU_connect.png"
+        alt=""
+        class="center"
+      />
     </div>
 
     <ion-row>
-      <ion-col size="12" style="padding:0 ;">
+      <ion-col size="12" style="padding: 0"> </ion-col>
 
-      </ion-col>
-
-      <ion-col size="12" style="padding:0 ;">
-        <div >
-          <a style="color:#70A8A4 ;text-align:center;" href=""> <p style="margin-top:0px;margin-bottom: 0px ;">Tên tài khoản</p> </a>
-        </div>
-      </ion-col>
-      <ion-col size="12" style="padding:0 ;">
-        <div style="margin-top: 10px;position:relative;padding:0 ;">
-         <p style="text-align:center;margin-top:0px;margin-bottom:0px;font-size:14px">Email</p>
-        </div>
-      </ion-col>
-      <ion-col size="12" style="padding:0 ;">
-          <div style="margin-top:35px ;" >
-            <ion-text color="primary" style="font-size: small;color:#237A73;">
-              Nhập mã xác nhận bạn đã nhận từ email
-            </ion-text>
-          </div>
-      </ion-col>
-      <ion-col size="12" style="padding:0 ;">
+      <ion-col size="12" style="padding: 0">
         <div>
-          <div id="name_display" > <ion-input type="text" placeholder="Tên hiển thị"></ion-input></div>
+          <a style="color: #70a8a4; text-align: center" href="">
+            <p style="margin-top: 0px; margin-bottom: 0px">Tên tài khoản</p>
+          </a>
+        </div>
+      </ion-col>
+      <ion-col size="12" style="padding: 0">
+        <div style="margin-top: 10px; position: relative; padding: 0">
+          <p
+            style="
+              text-align: center;
+              margin-top: 0px;
+              margin-bottom: 0px;
+              font-size: 14px;
+            "
+          >
+            Email
+          </p>
+        </div>
+      </ion-col>
+      <ion-col size="12" style="padding: 0">
+        <div style="margin-top: 35px">
+          <ion-text color="primary" style="font-size: small; color: #237a73">
+            Nhập mã xác nhận bạn đã nhận từ email
+          </ion-text>
+        </div>
+      </ion-col>
+      <ion-col size="12" style="padding: 0">
+        <div>
+          <div id="name_display">
+            <ion-input type="text" placeholder="Tên hiển thị"></ion-input>
+          </div>
         </div>
       </ion-col>
 
-      <ion-col size="12" style="padding:0 ;">
-        <div >
-          <ion-text style="text-align: center;margin-top: 20px;font-size: 9.5px;" color="">
-            <div style="margin-top: 10px;" >
-              <ion-text style="text-align: center;font-family: 'Montserrat';
-              font-style: normal;
-              font-weight: 400;
-              font-size: 11.5px;
-              line-height: 15px;" color="">
+      <ion-col size="12" style="padding: 0">
+        <div>
+          <ion-text
+            style="text-align: center; margin-top: 20px; font-size: 9.5px"
+            color=""
+          >
+            <div style="margin-top: 10px">
+              <ion-text
+                style="
+                  text-align: center;
+                  font-family: 'Montserrat';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 11.5px;
+                  line-height: 15px;
+                "
+                color=""
+              >
                 <div id="contract">
-                 Chúng tôi đã gửi mã xác nhận qua email của bạn. Vui lòng nhập mã vào ô bên trên.
-
+                  Chúng tôi đã gửi mã xác nhận qua email của bạn. Vui lòng nhập
+                  mã vào ô bên trên.
                 </div>
               </ion-text>
             </div>
           </ion-text>
         </div>
-
-
       </ion-col>
-      <ion-col size="12" style="padding:0 ;">
-        <ion-text style="top: 5px;position: relative;margin-bottom: 96px;margin-left: 40px;font-size: 9.5px;text-align:center ;">
+      <ion-col size="12" style="padding: 0">
+        <ion-text
+          style="
+            top: 5px;
+            position: relative;
+            margin-bottom: 96px;
+            margin-left: 40px;
+            font-size: 9.5px;
+            text-align: center;
+          "
+        >
         </ion-text>
       </ion-col>
     </ion-row>
@@ -73,18 +110,16 @@
       </ion-button>
     </div>
     <div id="div_btnSubmit">
-      <ion-button id="btn_Submit" expand="block" fill="clear" shape="round">
+      <ion-button
+        id="btn_Submit"
+        expand="block"
+        fill="clear"
+        shape="round"
+        (click)="next()"
+      >
         Tiếp tục
       </ion-button>
     </div>
   </ion-grid>
-  <div  style="margin-left: 12px ; margin-right: 12px; ">
-
-  </div>
-
-
+  <div style="margin-left: 12px; margin-right: 12px"></div>
 </ion-content>
-
-
-
-
