--- a/src/app/pages/group/group.page.html
+++ b/src/app/pages/group/group.page.html
@@ -1,12 +1,25 @@
-<ion-header>
+<ion-header class="ion-no-border">
   <ion-toolbar>
-    <ion-title>group</ion-title>
+    <ion-title class="group-name">{{groupName}}</ion-title>
+    <div id="btn-more" slot="end">
+      <img src={{srcBtnMore}}>
+    </div>
+    <div id="btn-search" [ngStyle]="ngStyleSearch" slot="primary">
+      <img src={{srcBtnSearch}}>
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content appParallaxHeader [scrollEvents]="true">
+  
+  <div class="cover" [style.background-image]="'url(' + srcImgCover + ')'"></div>
+
+  <div class="main-content">
+    <div class="group-name">{{groupName}}</div>
+  </div>
 
 </ion-content>
+
 <ion-footer>
   <app-navigation-bar [location] = "3"></app-navigation-bar>
 </ion-footer>
