Add forgot password

--- a/src/app/pages/follow/follow.page.html
+++ b/src/app/pages/follow/follow.page.html
@@ -4,9 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
 <ion-footer>
   <app-navigation-bar [location]="2"></app-navigation-bar>
 </ion-footer>
