--- a/src/app/pages/register-final/register-final.page.html
+++ b/src/app/pages/register-final/register-final.page.html
@@ -1,7 +1,28 @@
 <ion-content>
-  <div style="text-align: left;margin-top:10px;margin-left:12px;position:relative;">
-    <img (click)="back()" id="rh-back-btn" src="../../../assets/icon/login/back.png" alt="">
-    <ion-text style="color: #237A73;margin-left:24px;font-size:23px;position:relative;bottom:5px;" color="primary">
+  <div
+    style="
+      text-align: left;
+      margin-top: 10px;
+      margin-left: 12px;
+      position: relative;
+    "
+  >
+    <img
+      (click)="back()"
+      id="rh-back-btn"
+      src="../../../assets/icon/login/back.png"
+      alt=""
+    />
+    <ion-text
+      style="
+        color: #237a73;
+        margin-left: 24px;
+        font-size: 23px;
+        position: relative;
+        bottom: 5px;
+      "
+      color="primary"
+    >
       Hoàn tất đăng ký
     </ion-text>
   </div>
@@ -25,9 +46,16 @@
 
       <ion-col size="12" style="padding: 0">
         <div>
-          <a style="color: #70a8a4; text-align: center" href="">
-            <p style="margin-top: 0px; margin-bottom: 0px">Chọn ảnh đại diện</p>
-          </a>
+          <p
+            style="
+              margin-top: 0px;
+              margin-bottom: 0px;
+              color: #70a8a4;
+              text-align: center;
+            "
+          >
+            Chọn ảnh đại diện
+          </p>
         </div>
       </ion-col>
 
@@ -62,8 +90,8 @@
                 Bằng việc đăng ký, bạn chấp nhận
                 <a style="color: #70a8a4" href="">Điều khoản dịch vụ</a>
                 và
-                <a style="color: #70a8a4" href="">Chính Sách Bảo Mật</a> của
-                chúng tôi.
+                <a style="color: #70a8a4" href="">Chính Sách Bảo Mật</a>
+                của chúng tôi.
               </p>
             </div>
           </ion-text>
